# triangulation

./: .vimrc  CMakeLists.txt  test.cpp
gsl/: CMakeLists.txt  config.h.unix
gts/: CMakeLists.txt
gts/src/: config.h.unix
